<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_laporan_baru"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/nik"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/mainBlue"/>
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nama"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/mainBlue"/>
        <EditText
            android:id="@+id/alamat"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/alamat"
            android:backgroundTint="@color/mainBlue"/>
        <EditText
            android:id="@+id/telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/telepon"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/mainBlue"/>
        <EditText
            android:id="@+id/isi_laporan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:ems="10"
            android:inputType="text|textMultiLine"
            android:hint="@string/isi_laporan"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/mainBlue"/>
        <Button
            android:clickable="false"
            android:enabled="false"
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/disabled_button"
            android:text="@string/tambahkan"
            android:textAllCaps="false"
            android:textColor="@color/absoluteWhite"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:onClick="onAdd"/>
    </LinearLayout>

</ScrollView>